<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rd.dmmr.tutosearchprofesores.RegistrarProf">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/books"
        android:alpha="0.7"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"/>

    <LinearLayout
        android:id="@+id/LYtop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="1dp"
            android:backgroundTint="@color/colorBlanco"
            />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circularprofileProf"
        android:layout_width="119dp"
        android:layout_height="129dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:layout_below="@id/LYtop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/imageprofile"
        app:civ_border_color="@android:color/darker_gray"
        app:civ_border_width="3sp"
        android:layout_marginTop="-15dp"/>

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_330sdp"
        android:layout_below="@id/circularprofileProf"
        android:background="@drawable/fondo_trans"
        android:paddingTop="15dp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <RelativeLayout
            android:id="@+id/LYInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/txt_nombres_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombres"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="6sp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/txt_apellidos_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/apeliidos"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="6sp"
                android:inputType="textPersonName"
                android:layout_below="@id/txt_nombres_reg"/>
            <TextView
                android:id="@+id/txt_fechanacimiento_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fecha_nacimiento"
                android:textSize="@dimen/_14sdp"
                android:drawableStart="@drawable/ic_if_christmas_date_1651909"
                android:drawablePadding="6sp"
                android:layout_below="@id/txt_apellidos_reg"
                />

            <EditText
                android:id="@+id/txtTelefonoProf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tel_fono"
                android:drawableStart="@drawable/ic_contact_phone_black_24dp"
                android:drawablePadding="6sp"
                android:inputType="phone"
                android:layout_below="@id/txt_fechanacimiento_reg"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spnProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_arrowColor="@color/GrisFondo"
                app:ms_floatingLabelColor="#A9A9A9"
                app:ms_floatingLabelText="Provincia"
                app:ms_hint="Seleccione su provincia"
                app:ms_hintColor="#000000"
                app:ms_multiline="true"
                android:layout_below="@id/txtTelefonoProf"
                >

            </fr.ganfra.materialspinner.MaterialSpinner>

            <EditText
                android:id="@+id/txtCorreoProf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo_electr_nico"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="6sp"
                android:inputType="textEmailAddress"
                android:layout_below="@id/spnProvincia"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:drawableStart="@drawable/ic_passwordopen"
                android:drawablePadding="6sp"
                android:inputType="textPassword"
                android:layout_below="@id/txtCorreoProf"/>

            <EditText
                android:id="@+id/txtPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6sp"
                android:drawableStart="@drawable/ic_passwordopen"
                android:ems="10"
                android:hint="@string/repetir_contrase_a"
                android:inputType="textPassword"
                android:layout_below="@id/txtPassword"/>

            <Button
                android:id="@+id/btnCargarimage"
                android:layout_width="165sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/cargarimage"
                android:background="@drawable/button_style"
                android:text="@string/cargar_foto"
                android:layout_below="@id/txtPassword2"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </ScrollView>




    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:text="@string/registrar"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>

